# Robust-Python

./: README.md  hello.py  pyproject.toml  run_tests.sh
code_examples/01/: adjust_recipe.py  adjust_recipe_improved.py  adjust_recipe_wrong.py  cookbooks.py  cookbooks_counter.py  cookbooks_defaultdict.py  run_tests.sh
code_examples/02/: double_items.py  kitchen.py  memory_value.py  print_items.py  run_tests.sh  types_example.py
code_examples/03/: find_workers.py  run_tests.sh  variable_annotation.py
code_examples/04/: annotated.py  create_hot_dog.py  create_hot_dog_defensive.py  create_hot_dog_union.py  product_type.py  pyproject.toml  run_tests.sh  sum_type.py
code_examples/04/invalid/: dispense_bun.py  final.py  hotdog_invalid.py  literals.py  newtype.py  union_hotdog.py
code_examples/05/: README.md  abc.py  count_authors.py  generic.py  graph.py  overriding_dict.py  print_items.py  reverse.py  run_tests.sh  typeddict.py  userdict.py
code_examples/06/: insecure.py
code_examples/07/: automated_recipe_maker.py  main.py  pasta_with_sausage.py  run_tests.sh
code_examples/08/: allergen.py  allergen_flag.py  auto_enum.py  auto_enum_generate.py  liquid_measure.py  liquid_measure_intenum.py  mother_sauces.py  mother_sauces_alias.py  mother_sauces_bad.py  mother_sauces_unique.py  run_tests.sh
code_examples/09/: fraction.py  frozen_recipe.py  namedtuple.py  nutritional_info.py  recipe.py  run_tests.sh
code_examples/10/: person_construction.py  pizza_maker.py  pizza_maker_invariant.py  pizza_maker_method.py  run_tests.sh
code_examples/11/: grocery_app.py  (+1 more)
(+64 files in other folders)
