[project]
name = "04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.basedpyright]
# typeCheckingMode = "strict"         # ["off", "basic", "standard", "strict", "recommended", "all"]
reportOptionalCall = true
reportOptionalOperand = true
reportOptionalIterable = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalContextManager = true
